// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<WithStyles(ForwardRef(Drawer))
  className="undefined"
  classes={
    Object {
      "paper": "undefined",
    }
  }
  open={false}
  variant="permanent"
>
  <div>
    <WithStyles(ForwardRef(IconButton))
      onClick={[Function]}
    >
      <[object Object] />
    </WithStyles(ForwardRef(IconButton))>
  </div>
  <WithStyles(ForwardRef(Divider)) />
  <WithStyles(ForwardRef(List))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      key="/"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <[object Object] />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Dashboard"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(Divider))
      key="pseudo_generated_key_0"
    />
    <WithStyles(ForwardRef(ListItem))
      button={true}
      key="/revenues"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <[object Object] />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Revenues"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      key="/expenses"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <[object Object] />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Expenses"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(Divider))
      key="pseudo_generated_key_1"
    />
    <WithStyles(ForwardRef(ListItem))
      button={true}
      key="/categories"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <[object Object] />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Categories"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(Divider))
      key="pseudo_generated_key_2"
    />
    <WithStyles(ForwardRef(ListItem))
      button={true}
      key="/settings"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <[object Object] />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Settings"
      />
    </WithStyles(ForwardRef(ListItem))>
  </WithStyles(ForwardRef(List))>
</WithStyles(ForwardRef(Drawer))>
`;

exports[`rendering renders correctly with opened menu 1`] = `
<WithStyles(ForwardRef(Drawer))
  className=""
  classes={
    Object {
      "paper": "",
    }
  }
  open={true}
  variant="permanent"
>
  <div>
    <WithStyles(ForwardRef(IconButton))
      onClick={[Function]}
    >
      <[object Object] />
    </WithStyles(ForwardRef(IconButton))>
  </div>
  <WithStyles(ForwardRef(Divider)) />
  <WithStyles(ForwardRef(List))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      key="/"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <[object Object] />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Dashboard"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(Divider))
      key="pseudo_generated_key_0"
    />
    <WithStyles(ForwardRef(ListItem))
      button={true}
      key="/revenues"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <[object Object] />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Revenues"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      key="/expenses"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <[object Object] />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Expenses"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(Divider))
      key="pseudo_generated_key_1"
    />
    <WithStyles(ForwardRef(ListItem))
      button={true}
      key="/categories"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <[object Object] />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Categories"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(Divider))
      key="pseudo_generated_key_2"
    />
    <WithStyles(ForwardRef(ListItem))
      button={true}
      key="/settings"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <[object Object] />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Settings"
      />
    </WithStyles(ForwardRef(ListItem))>
  </WithStyles(ForwardRef(List))>
</WithStyles(ForwardRef(Drawer))>
`;
